<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/mod_padding"
    android:paddingEnd="@dimen/mod_padding"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/name_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText_nickname"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nickname_prompt"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="@dimen/layout_margin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/done_label" />

    <TextView
        android:id="@+id/textView_nickname"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorAccent"
        android:elevation="25dp"
        android:paddingBottom="@dimen/small_padding"
        android:text=""
        android:textAlignment="center"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/star_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:contentDescription="@string/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/checkbox_on_background" />
            <TextView
                android:id="@+id/bio_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/bio_text" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>